feat: 新增脚本自动创建xmind对应的md

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
+    "predev": "node genXmindMd.js",
     "dev": "vitepress dev",
     "build": "vitepress build",
     "preview": "vitepress preview"
